--- a/nifi-xmlprocessor-processors/pom.xml
+++ b/nifi-xmlprocessor-processors/pom.xml
@@ -49,8 +49,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        
-<dependency>
+        <dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.2</version>
+</dependency>
+      <dependency>
     <groupId>de.odysseus.staxon</groupId>
     <artifactId>staxon</artifactId>
     <version>1.3</version>
