--- a/nifi-xmlprocessor-processors/pom.xml
+++ b/nifi-xmlprocessor-processors/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.hortonworks.nifi</groupId>
         <artifactId>xml</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>nifi-xmlprocessor-processors</artifactId>
@@ -29,10 +29,12 @@
         <dependency>
             <groupId>org.apache.nifi</groupId>
             <artifactId>nifi-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.nifi</groupId>
             <artifactId>nifi-utils</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.nifi</groupId>
