--- a/nifi-xmlprocessor-processors/pom.xml
+++ b/nifi-xmlprocessor-processors/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>nifi-utils</artifactId>
         </dependency>
         <dependency>
+    		<groupId>org.apache.avro</groupId>
+    		<artifactId>avro</artifactId>
+    		<version>1.8.2</version>
+		</dependency>
+        <dependency>
             <groupId>org.apache.nifi</groupId>
             <artifactId>nifi-mock</artifactId>
             <scope>test</scope>
